CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(Keccak VERSION 0.01)
SET(CMAKE_CXX_STANDARD 20)

ADD_SUBDIRECTORY(test)

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_LIBRARY(
        Keccak
        ${SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(
        Keccak
        PUBLIC ${PROJECT_SOURCE_DIR}/include
)
