CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(Keccak VERSION 1.0.0)
SET(CMAKE_CXX_STANDARD 20)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
INCLUDE(Gtest)

ADD_SUBDIRECTORY(test)

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_LIBRARY(
        Keccak
        ${SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(
        Keccak
        PUBLIC ${PROJECT_SOURCE_DIR}/include
)
